@@ -7,7 +7,7 @@ from __future__ import division
 import glob, math, md5, os, shutil, sys, time
 def _fn_name(): return sys._getframe(1).f_code.co_name
 
-##from subprocess import Popen, STDOUT, PIPE
+from subprocess import Popen, STDOUT, PIPE
 from tempfile import gettempdir
 from cStringIO import StringIO
 from matplotlib import verbose, __version__, rcParams, get_data_path
@@ -1140,8 +1140,8 @@ class FigureCanvasPS(FigureCanvasBase):
                 outfile += ext
         title = outfile
         
-        # write to a temp file, we'll move it to outfile when done
-        tmpfile = os.path.join(gettempdir(), md5.md5(outfile).hexdigest())
+        
+        tmpfile = md5.md5(outfile).hexdigest()
         fh = file(tmpfile, 'w')
         
         self.figure.dpi.set(72) # ignore the dpi kwarg
@@ -1266,40 +1266,38 @@ def convert_psfrags(tmpfile, psfrags, font_preamble, paperWidth, paperHeight,
 \end{figure}
 \end{document}
 """% (font_preamble, paperWidth, paperHeight, paperWidth, paperHeight,
-        '\n'.join(psfrags), angle, os.path.split(epsfile)[-1])
+'\n'.join(psfrags), angle, epsfile)
     latexh.close()
     
-    curdir = os.getcwd()
-    os.chdir(gettempdir())
-    
-    command = 'latex -interaction=nonstopmode "%s"' % latexfile
+    command = 'latex -interaction=nonstopmode "%s"'%(latexfile)
     verbose.report(command, 'debug-annoying')
-##    process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##    exit_status = process.wait()
-##    if exit_status: raise RuntimeError('LaTeX was not able to process \
-##your image.\nHere is the full report generated by LaTeX: \
-##\n\n' + process.stdout.read())
-##    else: verbose.report(process.stdout.read(), 'debug-annoying')
-    stdin, stdout, stderr = os.popen3(command)
-    verbose.report(stdout.read(), 'debug-annoying')
-    verbose.report(stderr.read(), 'helpful')
-    
+    process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                    stderr=STDOUT)
+    exit_status = process.wait()
+    if exit_status: raise RuntimeError('LaTeX was not able to process \
+your image.\nHere is the full report generated by LaTeX: \
+\n\n' + process.stdout.read())
+    else: verbose.report(process.stdout.read(), 'debug-annoying')
+##    stdin, stdout, stderr = os.popen3(command)
+##    verbose.report(stdout.read(), 'debug-annoying')
+##    verbose.report(stderr.read(), 'helpful')
+##    shutil.move(tmpfile, os.path.split(tmpfile)[-1])
     command = 'dvips -o "%s" "%s"' % (psfile, dvifile)
     verbose.report(command, 'debug-annoying')
-##    process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##    exit_status = process.wait()
-##    if exit_status: raise RuntimeError('dvips was not able to process \
-##your image.\nHere is the full report generated by dvips: \
-##\n\n' + process.stdout.read())
-##    else: verbose.report(process.stdout.read(), 'debug-annoying')
-    stdin, stdout, stderr = os.popen3(command)
-    verbose.report(stdout.read(), 'debug-annoying')
-    verbose.report(stderr.read(), 'helpful')
-    
+    process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                    stderr=STDOUT)
+    exit_status = process.wait()
+    if exit_status: raise RuntimeError('dvips was not able to process \
+your image.\nHere is the full report generated by dvips: \
+\n\n' + process.stdout.read())
+    else: verbose.report(process.stdout.read(), 'debug-annoying')
+##    stdin, stdout, stderr = os.popen3(command)
+##    verbose.report(stdout.read(), 'debug-annoying')
+##    verbose.report(stderr.read(), 'helpful')
+    os.remove(epsfile)
     shutil.move(psfile, tmpfile)
     for fname in glob.glob(tmpfile+'.*'):
         os.remove(fname)
-    os.chdir(curdir)
 
 
 def gs_distill(tmpfile, eps=False, ptype='letter', bbox=None):
@@ -1316,15 +1314,16 @@ def gs_distill(tmpfile, eps=False, ptype='letter', bbox=None):
     command = '%s -dBATCH -dNOPAUSE -r%d -sDEVICE=pswrite %s -sOutputFile="%s" \
                 "%s"'% (gs_exe, dpi, paper, outputfile, tmpfile)
     verbose.report(command, 'debug-annoying')
-##    process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##    exit_status = process.wait()
-##    if exit_status: raise RuntimeError('ghostscript was not able to process \
-##your image.\nHere is the full report generated by ghostscript: \
-##\n\n' + process.stdout.read())
-##    else: verbose.report(process.stdout.read(), 'debug-annoying')
-    stdin, stdout, stderr = os.popen3(command)
-    verbose.report(stdout.read(), 'debug-annoying')
-    verbose.report(stderr.read(), 'helpful')
+    process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                    stderr=STDOUT)
+    exit_status = process.wait()
+    if exit_status: raise RuntimeError('ghostscript was not able to process \
+your image.\nHere is the full report generated by ghostscript: \
+\n\n' + process.stdout.read())
+    else: verbose.report(process.stdout.read(), 'debug-annoying')
+##    stdin, stdout, stderr = os.popen3(command)
+##    verbose.report(stdout.read(), 'debug-annoying')
+##    verbose.report(stderr.read(), 'helpful')
     os.remove(tmpfile)
     shutil.move(outputfile, tmpfile)
     if eps:
@@ -1342,24 +1341,26 @@ def xpdf_distill(tmpfile, eps=False, ptype='letter', bbox=None):
     psfile = tmpfile + '.ps'
     command = 'ps2pdf -sPAPERSIZE=%s "%s" "%s"'% (ptype, tmpfile, pdffile)
     verbose.report(command, 'debug-annoying')
-##    process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##    exit_status = process.wait()
-##    if exit_status:
-##        raise RuntimeError('ps2pdf was not able to process your image.\n\
-##Here is the report generated by ghostscript:\n\n' + process.stdout.read())
-##    else: verbose.report(process.stdout.read(), 'debug-annoying')
-    stdin, stderr = os.popen4(command)
-    verbose.report(stderr.read(), 'helpful')
+    process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                    stderr=STDOUT)
+    exit_status = process.wait()
+    if exit_status:
+        raise RuntimeError('ps2pdf was not able to process your image.\n\
+Here is the report generated by ghostscript:\n\n' + process.stdout.read())
+    else: verbose.report(process.stdout.read(), 'debug-annoying')
+##    stdin, stderr = os.popen4(command)
+##    verbose.report(stderr.read(), 'helpful')
     command = 'pdftops -paper match -level2 "%s" "%s"'% (pdffile, psfile)
     verbose.report(command, 'debug-annoying')
-##    process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##    exit_status = process.wait()
-##    if exit_status: raise RuntimeError('pdftops was not able to process \
-##your image.\nHere is the full report generated by pdftops: \
-##\n\n' + process.stdout.read())
-##    else: verbose.report(process.stdout.read(), 'debug-annoying')
-    stdin, stderr = os.popen4(command)
-    verbose.report(stderr.read(), 'helpful')
+    process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                    stderr=STDOUT)
+    exit_status = process.wait()
+    if exit_status: raise RuntimeError('pdftops was not able to process \
+your image.\nHere is the full report generated by pdftops: \
+\n\n' + process.stdout.read())
+    else: verbose.report(process.stdout.read(), 'debug-annoying')
+##    stdin, stderr = os.popen4(command)
+##    verbose.report(stderr.read(), 'helpful')
     os.remove(tmpfile)
     shutil.move(psfile, tmpfile)
     if eps: 
@@ -1377,17 +1378,18 @@ def get_bbox(tmpfile, bbox):
     else: gs_exe = 'gs'
     command = '%s -dBATCH -dNOPAUSE -sDEVICE=bbox "%s"' % (gs_exe, tmpfile)
     verbose.report(command, 'debug-annoying')
-##    process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##    exit_status = process.wait()
-##    if exit_status: raise RuntimeError('ghostscript was not able to determine \
-##the bounding box for your image.\nHere is the full report generated by \
-##ghostscript: \n\n' + process.stdout.read())
-##    else:
-##        bbox_info = process.stdout.read()
-##        verbose.report(bbox_info, 'debug')
-    stdin, stdout, stderr = os.popen3(command)
-    verbose.report(stdout.read(), 'debug-annoying')
-    bbox_info = stderr.read()
+    process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                    stderr=STDOUT)
+    exit_status = process.wait()
+    if exit_status: raise RuntimeError('ghostscript was not able to determine \
+the bounding box for your image.\nHere is the full report generated by \
+ghostscript: \n\n' + process.stdout.read())
+    else:
+        bbox_info = process.stdout.read()
+        verbose.report(bbox_info, 'debug')
+##    stdin, stdout, stderr = os.popen3(command)
+##    verbose.report(stdout.read(), 'debug-annoying')
+##    bbox_info = stderr.read()
     verbose.report(bbox_info, 'helpful')
     l, b, r, t = [float(i) for i in bbox_info.split()[-4:]]
     
