@@ -34,7 +34,7 @@ rc('text', usetex=True)
 """
 
 import glob, md5, os, shutil, sys, warnings
-##from subprocess import Popen, STDOUT, PIPE
+from subprocess import Popen, STDOUT, PIPE
 from matplotlib import get_configdir, get_home, get_data_path, \
      rcParams, verbose
 from matplotlib._image import readpng
@@ -92,6 +92,8 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
                 'computer modern typewriter': ('cmtt', '')}
 
     def __init__(self):
+        self.dvipngVersion = self.get_dvipng_version()
+        
         if not os.path.isdir(self.texcache):
             os.mkdir(self.texcache)
         if rcParams['font.family'].lower() in ('serif', 'sans-serif', 'cursive', 'monospace'):
@@ -155,9 +157,9 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
     def get_font_preamble(self):
         return self._font_preamble
         
-    def get_tex_command(self, tex, fname, fontsize):
-        
-        fh = file(fname, 'w')
+    def make_tex(self, tex, prefix, fontsize):
+        texfile = os.path.join(self.texcache,prefix+'.tex')
+        fh = file(texfile, 'w')
         fontcmd = {'sans-serif' : r'{\sffamily %s}',
             'monospace'  : r'{\ttfamily %s}'}.get(self.font_family, 
                 r'{\rmfamily %s}')
@@ -172,31 +174,32 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
 """ % (self._font_preamble, fontsize, fontsize*1.25, tex)
         fh.write(s)
         fh.close()
-        command = 'latex -interaction=nonstopmode "%s"'%fname
-        return command
+        
+        return texfile
         
     def make_dvi(self, tex, fontsize, force=0):
         if debug: force = True
         
         prefix = self.get_prefix(tex, fontsize)
-        fname = os.path.join(self.texcache, prefix+ '.tex')
         dvibase = prefix + '.dvi'
-        dvifile = os.path.join(self.texcache, dvibase)        
+        dvifile = os.path.join(self.texcache, dvibase)
 
         if force or not os.path.exists(dvifile):
-            command = self.get_tex_command(tex, fname, fontsize)
-##            verbose.report(command, 'debug-annoying')
-##            process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##            exit_status = process.wait()
-##            if exit_status: raise RuntimeError('LaTeX was not able to process \
-##the flowing string:\n%s\nHere is the full report generated by LaTeX: \
-##\n\n'% tex + process.stdout.read())
-##            else: verbose.report(process.stdout.read(), 'debug-annoying')
+            texfile = self.make_tex(tex, prefix, fontsize)
+            command = 'latex -interaction=nonstopmode "%s"'%texfile
             verbose.report(command, 'debug-annoying')
-            stdin, stdout, stderr = os.popen3(command)
-            verbose.report(stdout.read(), 'debug-annoying')
-            err = stderr.read()
-            if err: verbose.report(err, 'helpful')
+            process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,\
+                            stderr=STDOUT)
+            exit_status = process.wait()
+            if exit_status: raise RuntimeError('LaTeX was not able to process \
+the flowing string:\n%s\nHere is the full report generated by LaTeX: \
+\n\n'% tex + process.stdout.read())
+            else: verbose.report(process.stdout.read(), 'debug-annoying')
+##            verbose.report(command, 'debug-annoying')
+##            stdin, stdout, stderr = os.popen3(command)
+##            verbose.report(stdout.read(), 'debug-annoying')
+##            err = stderr.read()
+##            if err: verbose.report(err, 'helpful')
 
         # tex will put it's output in the current dir if possible, and
         # if not in TEXMFOUTPUT.  So check for existence in current
@@ -209,34 +212,28 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
         
     def make_png(self, tex, fontsize, dpi, force=0):
         if debug: force = True
-        
+
         dvifile = self.make_dvi(tex, fontsize)
         prefix = self.get_prefix(tex, fontsize, dpi)
         pngfile = os.path.join(self.texcache, '%s.png'% prefix)
-
-        self.get_dvipng_version()  # raises if dvipng is not up-to-date
-        #print 'makepng', prefix, dvifile, pngfile
-        #command = 'dvipng -bg Transparent -fg "rgb 0.0 0.0 0.0" -D %d -T tight -o "%s" "%s"'% (dpi, pngfile, dvifile)
-        command = 'dvipng -bg Transparent -D "%s" -T tight -o "%s" "%s"'% (dpi, pngfile, dvifile)
-
-        #assume white bg
-        #command = "dvipng -bg 'rgb 1.0 1.0 1.0' -fg 'rgb 0.0 0.0 0.0' -D %d -T tight -o %s %s"% (dpi, pngfile, dvifile)
-        # assume gray bg
-        #command = "dvipng -bg 'rgb 0.75 0.75 .75' -fg 'rgb 0.0 0.0 0.0' -D %d -T tight -o %s %s"% (dpi, pngfile, dvifile)                
+        
+        command = 'dvipng -bg Transparent -D "%s" -T tight -o "%s" "%s"'%\
+                  (dpi, pngfile, dvifile)
 
         # see get_rgba for a discussion of the background
         if force or not os.path.exists(pngfile):
             verbose.report(command, 'debug-annoying')
-##            process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##            exit_status = process.wait()
-##            if exit_status: raise RuntimeError('dvipng was not able to \
-##process the flowing file:\n%s\nHere is the full report generated by dvipng: \
-##\n\n'% dvifile + process.stdout.read())
-##            else: verbose.report(process.stdout.read(), 'debug-annoying')
-            stdin, stdout, stderr = os.popen3(command)
-            verbose.report(stdout.read(), 'debug-annoying')
-            err = stderr.read()
-            if err: verbose.report(err, 'helpful')
+            process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE, 
+                            stderr=STDOUT)
+            exit_status = process.wait()
+            if exit_status: raise RuntimeError('dvipng was not able to \
+process the flowing file:\n%s\nHere is the full report generated by dvipng: \
+\n\n'% dvifile + process.stdout.read())
+            else: verbose.report(process.stdout.read(), 'debug-annoying')
+##            stdin, stdout, stderr = os.popen3(command)
+##            verbose.report(stdout.read(), 'debug-annoying')
+##            err = stderr.read()
+##            if err: verbose.report(err, 'helpful')
         return pngfile
 
     def make_ps(self, tex, fontsize, force=0):
@@ -248,17 +245,18 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
 
         if not os.path.exists(psfile):
             command = 'dvips -q -E -o "%s" "%s"'% (psfile, dvifile)
-##            process = Popen([command], shell=True, stdout=PIPE, stderr=STDOUT)
-##            exit_status = process.wait()
-##            if exit_status: raise RuntimeError('dvips was not able to process \
-##the flowing file:\n%s\nHere is the full report generated by dvips: \
-##\n\n'% dvifile + process.stdout.read())
-##            else: verbose.report(process.stdout.read(), 'debug-annoying')
-            verbose.report(command, 'debug-annoying')
-            stdin, stdout, stderr = os.popen3(command)
-            verbose.report(stdout.read(), 'debug-annoying')
-            err = stderr.read()
-            if err: verbose.report(err, 'helpful')
+            process = Popen([command], shell=True, stdin=PIPE, stdout=PIPE,
+                            stderr=STDOUT)
+            exit_status = process.wait()
+            if exit_status: raise RuntimeError('dvips was not able to process \
+the flowing file:\n%s\nHere is the full report generated by dvips: \
+\n\n'% dvifile + process.stdout.read())
+            else: verbose.report(process.stdout.read(), 'debug-annoying')
+##            verbose.report(command, 'debug-annoying')
+##            stdin, stdout, stderr = os.popen3(command)
+##            verbose.report(stdout.read(), 'debug-annoying')
+##            err = stderr.read()
+##            if err: verbose.report(err, 'helpful')
 
         return psfile
 
@@ -411,18 +409,19 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
 
     def get_dvipng_version(self):
         if self.dvipngVersion is not None: return self.dvipngVersion
-##        process = Popen('dvipng --version', shell=True, stderr=PIPE,stdout=PIPE)
-##        exit_status = process.wait()
-##        if exit_status: raise RuntimeError('Could not obtain dvipng version\n\
-##\n\n' + process.stdout.read())
-##        else: sout = process.stdout.read()
-##        for line in sout.split('\n'):
-        sin, sout = os.popen2('dvipng --version')
-        for line in sout.readlines():
+        process = Popen(['dvipng --version'], shell=True, stdin=PIPE,
+                        stderr=PIPE, stdout=PIPE)
+        exit_status = process.wait()
+        if exit_status: raise RuntimeError('Could not obtain dvipng version\n\
+\n\n' + process.stdout.read())
+        else: sout = process.stdout.read()
+        for line in sout.split('\n'):
+##        sin, sout = os.popen2('dvipng --version')
+##        for line in sout.readlines():
             if line.startswith('dvipng '):
-                self.dvipngVersion = line.split()[-1]
-                verbose.report('Found dvipng version %s'% self.dvipngVersion, 
+                version = line.split()[-1]
+                verbose.report('Found dvipng version %s'% version, 
                     'helpful')
-                return self.dvipngVersion
+                return version
         raise RuntimeError('Could not obtain dvipng version')
             
