@@ -1,3 +1,7 @@
+2006-04005 Use python's subprocess module for usetex calls to 
+           external programs. subprocess catches when they exit
+           abnormally so an error can be raised. - DSD
+
 2006-04-03 Fixed the bug in which widgets would not respond to
            events.  This regressed the twinx functionality, so I
            also updated subplots_adjust to update axes that share
